# tuberank

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  enums.py  fly.toml  manage.py  package-lock.json  package.json  pyproject.toml  secret.ini.example  shell.nix  tailwind.config.js
core/: utils.py
db/: README.md  fly.toml
ratings/: admin.py  api_views.py  enums.py  html_views.py  models.py  serializers.py  urls.py  views.py  yt_import.py
ratings/channels/: serializers.py  views.py
ratings/charts/: charts.py  views.py
ratings/lists/: serializers.py  views.py
ratings/management/commands/: add_tags_to_videos.py  create_yt_video_snapshot.py
ratings/migrations/: 0001_initial.py  0002_alter_channelsnapshot_custom_url.py  0002_alter_videolistitem_list_and_more.py  0002_videolist_remove_channelrating_date_publication_and_more.py  0003_channel_description.py  0003_rename_order_videolistitem_rank.py  0003_videolistrating_alter_usertag_name_and_more.py  0004_alter_channelrating_rating_alter_videorating_rating.py  0004_remove_videolistitem_unique_order_in_list_and_more.py  0004_videolist_unique_user_video_list_by_name.py  0005_alter_channelrating_rating_alter_videorating_rating.py  0005_videolistitem_description.py  0005_videolistitem_unique_video_in_list.py  0006_alter_channelsnapshot_count_views.py  0007_alter_videosnapshot_count_views.py  0008_alter_channelsnapshot_thumbnail_url_and_more.py  0009_alter_channelrating_rating_and_more.py  0010_usertagvote_and_more.py  0011_alter_usertagvote_vote.py  0012_alter_usertag_name.py  0013_remove_videolistitem_unique_rank_in_list.py  0014_alter_videoviewing_video.py  0015_alter_channelsnapshot_custom_url.py
ratings/models/: __init__.py  channels.py  lists.py  tags.py  videos.py
ratings/tags/: serializers.py  views.py
ratings/templates/: 400.html  403.html  404.html  500.html  about.html  base.html  channel_details.html  channel_list.html  channel_rating_detail.html  charts.html  charts_partial.html  homepage.html  homepage_partial.html  htmx-paginator.html  import_video.html  lists.html  login.html  profile.html  rating_partial.html  rating_partial_serializer.html  search.html  subscribe.html  tag_overview.html  video_details.html  video_list.html  video_rating.html  video_rating_detail.html
ratings/templatetags/: ratings_extras.py
ratings/users/: serializers.py  views.py
ratings/videos/: serializers.py  views.py
scripts/: tuberank_now_watching.user.js
tuberank/: asgi.py  settings.py  urls.py  wsgi.py
ytvd/: asgi.py  settings.py  urls.py  wsgi.py
(+42 files in other folders)
