[tool.poetry]
name = "tuberank"
version = "0.1.0"
description = ""
authors = ["dbeley <6568955+dbeley@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
djangorestframework = "^3.14.0"
django-extensions = "^3.2.1"
google-api-python-client = "^2.86.0"
isodate = "^0.6.1"
gunicorn = "^20.1.0"
psycopg = "^3.1.8"
whitenoise = "^6.4.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"
jedi = "^0.18.2"
black = "^23.3.0"
pyflakes = "^3.0.1"
isort = "^5.12.0"
pyright = "^1.1.305"
flake8 = "^6.0.0"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "django"
combine_as_imports = true
include_trailing_comma = true
line_length = 120

[tool.djlint]
profile="django"
ignore = "H031,H023,H006,H030,D018,H021,H029"
