[tool.poetry]
name = "tuberank"
version = "0.1.0"
description = ""
authors = ["dbeley <6568955+dbeley@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4"
djangorestframework = "^3"
django-extensions = "^3"
google-api-python-client = "^2"
isodate = "^0"
gunicorn = "^20"
whitenoise = "^6"
dj-database-url = "^2"
psycopg = "^3"
urllib3="^1"

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
jedi = "*"
black = "*"
pyflakes = "*"
isort = "*"
pyright = "*"
flake8 = "*"
mypy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "django"
combine_as_imports = true
include_trailing_comma = true
line_length = 120

[tool.djlint]
profile="django"
ignore = "H031,H023,H006,H030,D018,H021,H029"
